@@ -91,16 +91,108 @@ class ExtensionConfiguration(object):
             elif fatal:
                 fail("FATAL: bad directory %s in environment variable %s" % (dir, envvar))
 
+    def detect_features(self):
+        p = subprocess.Popen((self.curl_config(), '--features'),
+            stdout=subprocess.PIPE, stderr=subprocess.PIPE)
+        stdout, stderr = p.communicate()
+        if p.wait() != 0:
+            msg = "Problem running `%s' --features" % self.curl_config()
+            if stderr:
+                msg += ":\n" + stderr.decode()
+            raise ConfigurationError(msg)
+        curl_has_ssl = False
+        for feature in split_quoted(stdout.decode()):
+            if feature == 'SSL':
+                # this means any ssl library, not just openssl.
+                # we set the ssl flag to check for ssl library mismatch
+                # at link time and run time
+                self.define_macros.append(('HAVE_CURL_SSL', 1))
+                curl_has_ssl = True
+        self.curl_has_ssl = curl_has_ssl
+
+    def ssl_options(self):
+        return {
+            '--with-openssl': self.using_openssl,
+            '--with-ssl': self.using_openssl,
+            '--with-gnutls': self.using_gnutls,
+            '--with-nss': self.using_nss,
+        }
+
+    def detect_ssl_option(self):
+        for option in self.ssl_options():
+            if scan_argv(self.argv, option) is not None:
+                for other_option in self.ssl_options():
+                    if option != other_option:
+                        if scan_argv(self.argv, other_option) is not None:
+                            raise ConfigurationError('Cannot give both %s and %s' % (option, other_option))
+                
+                return option
+
+    def detect_ssl_backend(self):
+        ssl_lib_detected = False
+        
+        if 'PYCURL_SSL_LIBRARY' in os.environ:
+            ssl_lib = os.environ['PYCURL_SSL_LIBRARY']
+            if ssl_lib in ['openssl', 'gnutls', 'nss']:
+                ssl_lib_detected = True
+                getattr(self, 'using_%s' % ssl_lib)()
+            else:
+                raise ConfigurationError('Invalid value "%s" for PYCURL_SSL_LIBRARY' % ssl_lib)
+        
+        option = self.detect_ssl_option()
+        if option:
+            ssl_lib_detected = True
+            self.ssl_options()[option]()
+
+        # ssl detection - ssl libraries are added
+        if not ssl_lib_detected:
+            libcurl_dll_path = scan_argv(self.argv, "--libcurl-dll=")
+            if libcurl_dll_path is not None:
+                if self.detect_ssl_lib_from_libcurl_dll(libcurl_dll_path):
+                    ssl_lib_detected = True
+
+        if not ssl_lib_detected:
+            # self.sslhintbuf is a hack
+            for arg in split_quoted(self.sslhintbuf):
+                if arg[:2] == "-l":
+                    if arg[2:] == 'ssl':
+                        self.using_openssl()
+                        ssl_lib_detected = True
+                        break
+                    if arg[2:] == 'gnutls':
+                        self.using_gnutls()
+                        ssl_lib_detected = True
+                        break
+                    if arg[2:] == 'ssl3':
+                        self.using_nss()
+                        ssl_lib_detected = True
+                        break
+
+        if not ssl_lib_detected and len(self.argv) == len(self.original_argv) \
+                and not os.environ.get('PYCURL_CURL_CONFIG') \
+                and not os.environ.get('PYCURL_SSL_LIBRARY'):
+            # this path should only be taken when no options or
+            # configuration environment variables are given to setup.py
+            ssl_lib_detected = self.detect_ssl_lib_on_centos6()
+            
+        self.ssl_lib_detected = ssl_lib_detected
+
+    def curl_config(self):
+        try:
+            return self._curl_config
+        except AttributeError:
+            curl_config = os.environ.get('PYCURL_CURL_CONFIG', "curl-config")
+            curl_config = scan_argv(self.argv, "--curl-config=", curl_config)
+            self._curl_config = curl_config
+            return curl_config
 
     def configure_unix(self):
         OPENSSL_DIR = scan_argv(self.argv, "--openssl-dir=")
         if OPENSSL_DIR is not None:
             self.include_dirs.append(os.path.join(OPENSSL_DIR, "include"))
             self.library_dirs.append(os.path.join(OPENSSL_DIR, "lib"))
-        CURL_CONFIG = os.environ.get('PYCURL_CURL_CONFIG', "curl-config")
-        CURL_CONFIG = scan_argv(self.argv, "--curl-config=", CURL_CONFIG)
         try:
-            p = subprocess.Popen((CURL_CONFIG, '--version'),
+            p = subprocess.Popen((self.curl_config(), '--version'),
                 stdout=subprocess.PIPE, stderr=subprocess.PIPE)
         except OSError:
             exc = sys.exc_info()[1]
@@ -108,17 +200,17 @@ class ExtensionConfiguration(object):
             raise ConfigurationError(msg)
         stdout, stderr = p.communicate()
         if p.wait() != 0:
-            msg = "`%s' not found -- please install the libcurl development files or specify --curl-config=/path/to/curl-config" % CURL_CONFIG
+            msg = "`%s' not found -- please install the libcurl development files or specify --curl-config=/path/to/curl-config" % self.curl_config()
             if stderr:
                 msg += ":\n" + stderr.decode()
             raise ConfigurationError(msg)
         libcurl_version = stdout.decode().strip()
-        print("Using %s (%s)" % (CURL_CONFIG, libcurl_version))
-        p = subprocess.Popen((CURL_CONFIG, '--cflags'),
+        print("Using %s (%s)" % (self.curl_config(), libcurl_version))
+        p = subprocess.Popen((self.curl_config(), '--cflags'),
             stdout=subprocess.PIPE, stderr=subprocess.PIPE)
         stdout, stderr = p.communicate()
         if p.wait() != 0:
-            msg = "Problem running `%s' --cflags" % CURL_CONFIG
+            msg = "Problem running `%s' --cflags" % self.curl_config()
             if stderr:
                 msg += ":\n" + stderr.decode()
             raise ConfigurationError(msg)
@@ -156,7 +248,7 @@ class ExtensionConfiguration(object):
         sslhintbuf = ''
         errtext = ''
         for option in ["--libs", "--static-libs"]:
-            p = subprocess.Popen((CURL_CONFIG, option),
+            p = subprocess.Popen((self.curl_config(), option),
                 stdout=subprocess.PIPE, stderr=subprocess.PIPE)
             stdout, stderr = p.communicate()
             if p.wait() == 0:
@@ -182,30 +274,22 @@ class ExtensionConfiguration(object):
             if errtext:
                 msg += ":\n" + errtext
             raise ConfigurationError(msg)
+            
+        # hack
+        self.sslhintbuf = sslhintbuf
 
-        ssl_lib_detected = False
-        if 'PYCURL_SSL_LIBRARY' in os.environ:
-            ssl_lib = os.environ['PYCURL_SSL_LIBRARY']
-            if ssl_lib in ['openssl', 'gnutls', 'nss']:
-                ssl_lib_detected = True
-                getattr(self, 'using_%s' % ssl_lib)()
-            else:
-                raise ConfigurationError('Invalid value "%s" for PYCURL_SSL_LIBRARY' % ssl_lib)
-        ssl_options = {
-            '--with-openssl': self.using_openssl,
-            '--with-ssl': self.using_openssl,
-            '--with-gnutls': self.using_gnutls,
-            '--with-nss': self.using_nss,
-        }
-        for option in ssl_options:
-            if scan_argv(self.argv, option) is not None:
-                for other_option in ssl_options:
-                    if option != other_option:
-                        if scan_argv(self.argv, other_option) is not None:
-                            raise ConfigurationError('Cannot give both %s and %s' % (option, other_option))
-                ssl_lib_detected = True
-                ssl_options[option]()
-                break
+        self.detect_features()
+        if self.curl_has_ssl:
+            self.detect_ssl_backend()
+
+            if not self.ssl_lib_detected:
+                raise ConfigurationError('''\
+Curl is configured to use SSL, but we have not been able to determine \
+which SSL backend it is using. Please see PycURL documentation for how to \
+specify the SSL backend manually.''')
+        else:
+            if self.detect_ssl_option():
+                sys.stderr.write("Warning: SSL backend specified manually but libcurl does not use SSL\n")
 
         # libraries and options - all libraries and options are forwarded
         # but if --libs succeeded, --static-libs output is ignored
@@ -216,52 +300,7 @@ class ExtensionConfiguration(object):
                 self.library_dirs.append(arg[2:])
             else:
                 self.extra_link_args.append(arg)
-
-        # ssl detection - ssl libraries are added
-        if not ssl_lib_detected:
-            libcurl_dll_path = scan_argv(self.argv, "--libcurl-dll=")
-            if libcurl_dll_path is not None:
-                if self.detect_ssl_lib_from_libcurl_dll(libcurl_dll_path):
-                    ssl_lib_detected = True
-
-        if not ssl_lib_detected:
-            for arg in split_quoted(sslhintbuf):
-                if arg[:2] == "-l":
-                    if arg[2:] == 'ssl':
-                        self.using_openssl()
-                        ssl_lib_detected = True
-                        break
-                    if arg[2:] == 'gnutls':
-                        self.using_gnutls()
-                        ssl_lib_detected = True
-                        break
-                    if arg[2:] == 'ssl3':
-                        self.using_nss()
-                        ssl_lib_detected = True
-                        break
-
-        if not ssl_lib_detected and len(self.argv) == len(self.original_argv) \
-                and not os.environ.get('PYCURL_CURL_CONFIG') \
-                and not os.environ.get('PYCURL_SSL_LIBRARY'):
-            # this path should only be taken when no options or
-            # configuration environment variables are given to setup.py
-            ssl_lib_detected = self.detect_ssl_lib_on_centos6()
-
-        if not ssl_lib_detected:
-            p = subprocess.Popen((CURL_CONFIG, '--features'),
-                stdout=subprocess.PIPE, stderr=subprocess.PIPE)
-            stdout, stderr = p.communicate()
-            if p.wait() != 0:
-                msg = "Problem running `%s' --features" % CURL_CONFIG
-                if stderr:
-                    msg += ":\n" + stderr.decode()
-                raise ConfigurationError(msg)
-            for feature in split_quoted(stdout.decode()):
-                if feature == 'SSL':
-                    # this means any ssl library, not just openssl.
-                    # we set the ssl flag to check for ssl library mismatch
-                    # at link time and run time
-                    self.define_macros.append(('HAVE_CURL_SSL', 1))
+            
         if not self.libraries:
             self.libraries.append("curl")
 
