@@ -12,6 +12,9 @@ while test -n "$1"; do
   --static-libs)
     echo '-lssl'
     ;;
+  --features)
+    echo 'SSL'
+    ;;
   esac
   shift
 done
